<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_foot"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/layout_detail"
                layout="@layout/layout_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bottom_foot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/app_color_on_secondary"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ic_minus"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="32dp"
                android:layout_height="42dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/symbol_minus"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="multiply"
                app:cornerRadius="8dp"
                app:rippleColor="@color/app_color_on_tertiary"
                app:strokeColor="@color/app_color_on_primary"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/tv_quantity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/number_count"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ic_add"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="32dp"
                android:layout_height="42dp"
                android:ellipsize="end"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/symbol_plus"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="multiply"
                app:cornerRadius="8dp"
                app:rippleColor="@color/app_color_on_tertiary"
                app:strokeColor="@color/app_color_on_primary"
                app:strokeWidth="2dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/app_color_on_primary"
            android:textColor="@android:color/white"
            android:text="@string/add_to_cart_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
